studentapp/student-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: myapp-service-test
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      # nodePort: 31000
  selector:
    app: student
